增加对外提供一些属性设置的方法
字体颜色,大小;分割线颜色,是否隐藏;上下显示条目数.

--- a/app/src/main/res/layout/datepicker_dialog_view.xml
+++ b/app/src/main/res/layout/datepicker_dialog_view.xml
@@ -58,7 +58,7 @@
             <com.lipy.androiddatepicker.library.DatePicker
                     android:layout_width="match_parent"
                     android:id="@+id/wheel_view_wv"
-                    android:layout_height="200dp">
+                    android:layout_height="wrap_content">
 
             </com.lipy.androiddatepicker.library.DatePicker>
         </LinearLayout>
